# MappingEngine

./: CMakeLists.txt
Plugin/: CMakeLists.txt
Plugin/src/: MapPlugin.cpp  MapPlugin.h  MapPluginEngine.cpp  MapPluginEngine.h  MapReply.cpp  MapReply.h  MapTileFetcher.cpp  MapTileFetcher.h  plugin.json
include/MapDefines/: MapDefines.h
include/MapHandler/: Feature.h  Geometry.h  MapHandler.h  Styler.h
include/MapWidget/: MapWidget.h
resources/: map.qrc
resources/qml/: Map.qml  Marker.qml
src/: main.cpp
src/MapHandler/: Feature.cpp  MapHandler.cpp
src/MapWidget/: MapWidget.cpp
